# nuke-mcp

./: .gitignore  .mcp.json  BEST_PRACTICES.md  CLAUDE.md  CLAUDE_GENERIC.md  CONTRIBUTING.md  IMPLEMENTATION.md  README.md  WORKFLOW.md  bootstrap.sh  nuke_mcp_roadmap.md  pyproject.toml
.github/workflows/: test.yml
docs/: MARKETING.md  README.md  ROADMAP.md  TECHNICAL.md  USE_CASES.md
docs/examples/: cg_integration.md  cleanup_plate.md  deep_comp.md  greenscreen_comp.md  splat_render.md
memory/: facility.md
nuke_addon/: menu.py  nuke_mcp_addon.py
plugins/: README.md
scripts/: bootstrap.bat  bootstrap.sh  ingest_docs.py
skills/: retarget-fx-shot.md
src/: main.py
src/nukemcp/: __init__.py  connection.py  discovery.py  events.py  memory.py  mock.py  plugins.py  prompts.py  rag.py  resources.py  server.py  version.py
src/nukemcp/tools/: _helpers.py  annotations.py  batch.py  comp.py  deep.py  graph.py  ml.py  render.py  script.py  splats.py  templates.py  threed.py  tracking.py
tests/: conftest.py  test_annotations.py  test_batch.py  test_comp.py  test_connection.py  test_deep.py  test_discovery.py  test_events.py  test_graph.py  test_helpers.py  test_main.py  test_memory.py  test_ml.py  test_plugins.py  test_rag.py  test_render.py  test_script.py  test_server_integration.py  test_splats.py  test_templates.py  test_threed.py  test_tracking.py  test_version_gating.py
tests/integration/: conftest.py  test_integration.py
