[project]
name = "nuke-mcp"
version = "0.1.0"
description = "MCP server for Foundry Nuke — AI copilot for compositors"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["nuke", "mcp", "compositing", "vfx", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "fastmcp>=2.14,<3.0",
]

[project.urls]
Homepage = "https://github.com/kleer001/nuke-mcp"
Repository = "https://github.com/kleer001/nuke-mcp"
Issues = "https://github.com/kleer001/nuke-mcp/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
nuke-mcp = "nukemcp.server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require a running Nuke instance (deselect with '-m \"not integration\"')",
]
addopts = "-m 'not integration'"

[tool.ruff]
target-version = "py310"
line-length = 100
